--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
+    // Use the following line to include client library from Maven Central Repository
+    implementation 'com.microsoft.projectoxford:vision:1.0.394'
 }
