OCR 플ë 작동하는 액티비티 생성 ë°

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Blank"
         tools:targetApi="31">
         <activity
-            android:name=".PlayActivity"
+            android:name=".PlayOCRActivity"
             android:exported="false" />
         <activity
             android:name=".TextEditActivity"
