--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -41,5 +42,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Use the following line to include client library from Maven Central Repository
-    implementation 'com.microsoft.projectoxford:vision:1.0.394'
+    implementation 'com.github.janbarari:android-cloud-ocr:v1.0.0-alpha'
+
+    //okHTTP
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
