--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.blank">
-
+`
+    <library tools:node="removeAll" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +18,9 @@
         android:theme="@style/Theme.Blank"
         tools:targetApi="31">
         <activity
+            android:name=".PlayActiviry"
+            android:exported="false" />
+        <activity
             android:name=".PlayOCRActivity"
             android:exported="false" />
         <activity
@@ -24,7 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,8 +41,7 @@
         <activity
             android:name=".MainIndexActivity"
             android:exported="false"
-            android:label="목록">
-        </activity>
+            android:label="목록"></activity>
     </application>
 
 </manifest>
