OCR ã실 행  하던 중 새로운 사진 추가시 이전 쓰레드 죽이고 새로운 사진 부분석 시작 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // Use the following line to include client library from Maven Central Repository
+    //glide - 이미지 로딩 및 처리를 위한 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    // OCR 라이브러리
     implementation 'com.github.janbarari:android-cloud-ocr:v1.0.0-alpha'
 
-    //okHTTP
+    //okHTTP - Json을 Gson으로 변환하는 라이브러리
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 
-    //Retrofit
+    //Retrofit - REST API를 사용하기 위한 API 통신을 위한 라이브러리
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
