--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.blank">
-`
+
     <library tools:node="removeAll" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Blank"
         tools:targetApi="31">
+        <activity
+            android:name=".TextHighlightActivity"
+            android:exported="false" />
         <activity
             android:name=".PlayActiviry"
             android:exported="false" />
@@ -41,7 +48,7 @@
         <activity
             android:name=".MainIndexActivity"
             android:exported="false"
-            android:label="목록"></activity>
+            android:label="목록" />
     </application>
 
 </manifest>
